Intellij cleanups